# MCFskel-via-LSMAT

./: .gitignore  CMakeLists.txt  Collapser.h  LSMAT.cpp  LSMAT.hpp  LaplaceHelper.hpp  Voronoi.hpp  main.cpp  meanCurvatureFlow.hpp  sphereShrinking.hpp  utils.hpp
